--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		messageField.text = "Welcome: Click to play";
 
 		// start the music
-		createjs.Sound.play("music", {interrupt: createjs.Sound.INTERRUPT_NONE, loop: -1, volume: 0.05});
+		//createjs.Sound.play("music", {interrupt: createjs.Sound.INTERRUPT_NONE, loop: -1, volume: 0.05});
 
 		watchRestart();
 	}
