--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	<script src="assets/examples.js"></script>
 </head>
 
-<body onload="init();" style="background-color:#000000;">
+<body onload="init();" style="background-color:#000000; width:800px; height:800px; padding:0px; margin:0px;">
 
 <div id="content">
 	<canvas id="gameCanvas" width="800" height="480" style="background:black;"></canvas>
+	<input id="dummytextbox" type="text" style="display:none;"/>
 </div>
 <script src="libs/preloadjs-NEXT.min.js"></script>
 <script src="libs/soundjs-NEXT.min.js"></script>
@@ -24,6 +25,7 @@
 
 <!-- Game variables -->
 <script type="text/javascript">
+  document.getElementById("dummytextbox").focus();
   var manifest;           // used to register sounds for preloading
   var rockimages;         // rock images for preloading
   
