--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div id="content">
 	<canvas id="gameCanvas" width="800" height="480" style="background:black;"></canvas>
-	<input id="dummytextbox" type="text" style="display:none;"/>
+	<input id="dummytextbox" type="text" style="height:1px; background:transparent; border:0px; width:800px;"/>
 </div>
 <script src="libs/preloadjs-NEXT.min.js"></script>
 <script src="libs/soundjs-NEXT.min.js"></script>
