--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
       {id: "bg0", src: "bg0.png"},
       {id: "bg1", src: "bg1.png"},
       {id: "bg2", src: "bg2.png"},
-      {id: "cloud", src:"cloud.png"}      
+      {id: "cloud", src:"cloud.png"},
+      {id: "duck", src:"duck.png"},
+      {id: "dragon", src:"dragon.png"},
+      {id: "firework", src:"firework.png"}                        
     ];    
 
     //createjs.Sound.alternateExtensions = ["mp3"];
