adding opengraph meta tags and logo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh-yue">
 <head>
+  
 	<meta charset="utf-8">
 	<title>CantoRocks</title>
+  <meta property="og:title" content="CantoRocks" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://chaaklau.github.io/cantorocks" />
+  <meta property="og:image" content="https://chaaklau.github.io/cantorocks/images/logo.png" />  
+  <meta property="og:description" 
+    content="A mini-game that helps you practise spelling Cantonese words using Jyutping romanisation and reinforce your basic Cantonese vocbulary." />
+  <meta property="og:determiner" content="the" />
+  <meta property="og:locale" content="zh-yue-Hant-HK" />
+  <meta property="og:locale:alternate" content="zh-yue" />
+  <meta property="og:site_name" content="CantoSounds" />  
 
 	<link rel="stylesheet" type="text/css" href="assets/shared.css"/>
 	<link rel="stylesheet" type="text/css" href="assets/examples.css"/>
