--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <meta property="og:description" 
     content="A mini-game that helps you practise spelling Cantonese words using Jyutping romanisation and reinforce your basic Cantonese vocbulary." />
   <meta property="og:determiner" content="the" />
-  <meta property="og:locale" content="zh-yue-Hant-HK" />
-  <meta property="og:locale:alternate" content="zh-yue" />
+  <meta property="og:locale" content="zh-yue" />
   <meta property="og:site_name" content="CantoSounds" />  
 
 	<link rel="stylesheet" type="text/css" href="assets/shared.css"/>
