--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 
 <div id="error">
-  <h1> Sorry &gt;_&lt; It looks like your browswer is not compatible.</h1>
+  <p>A mini-game that helps you practise spelling Cantonese words using Jyutping romanisation and reinforce your basic Cantonese vocbulary.</p>
 </div>
 
 <script type="text/javascript" id="gameplay">
