--- a/index.html
+++ b/index.html
@@ -648,17 +648,19 @@
 
     var x = e.keyCode;
 		if (!e.altKey && !e.metaKey){
-      switch (x) {
-        //TODO: Add function to quit game
-        case 61:
-        case 187:        
-          showingMsg = new MsgBox();
-          showingMsg.init("GAME PAUSED");
-          showingMsg.show();
-          stage.addChild(showingMsg);
-          game.pause();
-          stage.update();
-          break;
+      if (!pendingStart && !showingMsg) {
+        switch (x) {
+          //TODO: Add function to quit game
+          case 61:
+          case 187:        
+            showingMsg = new MsgBox();
+            showingMsg.init("GAME PAUSED");
+            showingMsg.show();
+            stage.addChild(showingMsg);
+            game.pause();
+            stage.update();
+            break;
+        }
       }
 
   		if (pendingStart || showingMsg) {
@@ -672,7 +674,6 @@
             } else {
               if (pendingStart) {restart(); pendingStart = false;}              
             }
-            stage.update();
             break;
           case 37:
             screenMode = (screenMode+4) % 5;
