--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
   <script type="text/javascript" src="audiospritelist.js"></script>	
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44931134-2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1W7MV9Q8GG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-44931134-2');
+    gtag('config', 'G-1W7MV9Q8GG');
   </script>
 </head>
 
